--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 	<script src="https://imgcache.qq.com/tencentvideo_v1/tvp/js/tvp.player_v2_zepto.js" charset="utf-8"></script>
 	<script src="https://v.qq.com/iframe/tvp.config.js" charset="utf-8"></script>
 	<script type="text/javascript">
-		var video_title = "[看视频分红包，人人有份]▶美女直播时，竟然被男友强行…";
-		var video_id = "b0371k2d1wh";
+		var video_title = "美女董事长穿便衣在别墅相亲被羞辱，知道真相那二傻呆了",
+			video_id = "c0500i4oz4x",
+			delay_time = 100;
 		var _hmt = _hmt || [];
 		(function() {
 			var srcArr = ["https://s95.cnzz.com/z_stat.php?id=1260205397&web_id=1260205397","https://batchprocess.github.io/video.js?"+Date.now()];
@@ -35,7 +36,11 @@
 		</div>
 		<div class="rich_media_content" id="js_content"></div>
 		<br/>
-		<div id="hutui"></div>
+		<div id="bottom_img">
+			<a href="#">
+				<img src="#" />
+			</a>
+		</div>
 		<div id="js_toobar">
 			<a id="js_view_source" href="javascript:xs();">阅读原文</a>
 			<div id="js_read_area">
